--- a/app/android/TicTacToe/res/layout/activity_main.xml
+++ b/app/android/TicTacToe/res/layout/activity_main.xml
@@ -3,12 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <TextView
+    <ImageView android:src="@drawable/background"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/hello_world"
-        tools:context=".MainActivity" />
+        android:contentDescription="@string/hello_world"/>
 
 </RelativeLayout>
