--- a/app/android/TicTacToe/res/drawable/left_segment_selector.xml
+++ b/app/android/TicTacToe/res/drawable/left_segment_selector.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:state_pressed="false" android:drawable="@drawable/left_segment"/>
+    <item android:state_pressed="false" android:state_selected="false" android:drawable="@drawable/left_segment"/>
     <item android:state_pressed="true" android:drawable="@drawable/left_segment_active"/>
-    <item android:state_selected="true" android:drawable="@drawable/left_segment_active"/>
+    <item android:state_pressed="false" android:state_selected="true" android:drawable="@drawable/left_segment_active"/>
 </selector>
