Updated button styles. Updated mockup. Updated segmented control handling

--- a/app/android/TicTacToe/res/values/styles.xml
+++ b/app/android/TicTacToe/res/values/styles.xml
@@ -1,5 +1,17 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <style name="AppTheme" parent="android:Theme.Light" />
+    
+    <style name="ButtonStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:shadowColor">#222222</item>
+        <item name="android:shadowDy">1</item>
+        <item name="android:shadowRadius">1</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:maxHeight">40dp</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
 
 </resources>
