--- a/app/android/TicTacToe/res/layout/activity_main.xml
+++ b/app/android/TicTacToe/res/layout/activity_main.xml
@@ -17,18 +17,10 @@
         android:layout_marginTop="18dp">
         
         <Button android:id="@+id/button_3x3"
-            android:onClick="on3x3Clicked" 
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:onClick="on3x3Clicked"
             android:background="@drawable/left_segment_selector"
             android:text="@string/button_3x3"
-            android:textColor="#ffe6d5"
-	        android:shadowColor="#222222"
-	        android:shadowDy="1"
-	        android:shadowRadius="1"
-	        android:textStyle="bold"
-	        android:textSize="18sp"
-	        android:maxHeight="40dp" />
+            style="@style/ButtonStyle" />
         
         <ImageView android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -37,36 +29,20 @@
         
         <Button android:id="@+id/button_5x5"
             android:onClick="on5x5Clicked"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:background="@drawable/right_segment_selector"
             android:text="@string/button_5x5"
-            android:textColor="#ffe6d5"
-	        android:shadowColor="#222222"
-	        android:shadowDy="1"
-	        android:shadowRadius="1"
-	        android:textStyle="bold"
-	        android:textSize="18sp"
-	        android:maxHeight="40dp" />
+	        style="@style/ButtonStyle" />
     </LinearLayout>
 
     <Button
         android:id="@+id/restart_button"
         android:onClick="onRestartGame"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="18dp"
         android:minWidth="200dp"
-        android:textColor="#FFFFFF"
-        android:shadowColor="#222222"
-        android:textSize="18sp"
-        android:maxHeight="40dp"
-        android:shadowDy="1"
-        android:shadowRadius="1"
         android:background="@drawable/button_selector"
         android:text="@string/restart_game"
-        android:textStyle="bold" />
+        style="@style/ButtonStyle" />
 
 </RelativeLayout>
