--- a/app/android/TicTacToe/res/layout/activity_main.xml
+++ b/app/android/TicTacToe/res/layout/activity_main.xml
@@ -46,18 +46,10 @@
         style="@style/ButtonStyle" />
     
     <TableLayout android:id="@+id/playground_root_3x3"
-        android:minWidth="290dp"
-        android:minHeight="290dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true" />
+        style="@style/PlaygroundStyle" />
     
     <TableLayout android:id="@+id/playground_root_5x5"
-        android:minWidth="290dp"
-        android:minHeight="290dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:visibility="invisible" />
+        android:visibility="invisible"
+        style="@style/PlaygroundStyle" />
 
 </RelativeLayout>
