--- a/app/android/TicTacToe/res/values/styles.xml
+++ b/app/android/TicTacToe/res/values/styles.xml
@@ -13,5 +13,13 @@
         <item name="android:maxHeight">40dp</item>
         <item name="android:textColor">#FFFFFF</item>
     </style>
+    
+    <style name="PlaygroundStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:minWidth">290dp</item>
+        <item name="android:minHeight">290dp</item>
+        <item name="android:layout_centerInParent">true</item>
+    </style>
 
 </resources>
