--- a/app/android/TicTacToe/res/values/styles.xml
+++ b/app/android/TicTacToe/res/values/styles.xml
@@ -15,10 +15,8 @@
     </style>
     
     <style name="PlaygroundStyle">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:minWidth">290dp</item>
-        <item name="android:minHeight">290dp</item>
+        <item name="android:layout_width">290dp</item>
+        <item name="android:layout_height">290dp</item>
         <item name="android:layout_centerInParent">true</item>
     </style>
 
