--- a/app/android/TicTacToe/res/layout/activity_main.xml
+++ b/app/android/TicTacToe/res/layout/activity_main.xml
@@ -7,8 +7,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:contentDescription="@string/hello_world"
-        android:src="@drawable/background"  />
+        android:src="@drawable/background"
+        android:contentDescription="@string/background_desc" />
     
     <LinearLayout android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -25,7 +25,7 @@
         <ImageView android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/segment_separator"
-            android:contentDescription="@string/hello_world"/>
+            android:contentDescription="@string/segment_separator_desc" />
         
         <Button android:id="@+id/button_5x5"
             android:onClick="on5x5Clicked"
