--- a/app/android/TicTacToe/res/layout/activity_main.xml
+++ b/app/android/TicTacToe/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         <ImageView android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/segment_separator"
-            android:contentDescription="@string/segment_separator_desc" />
+            android:contentDescription="@string/no_desc" />
         
         <Button android:id="@+id/button_5x5"
             android:onClick="on5x5Clicked"
