Initial redesign of android app

--- a/app/android/TicTacToe/res/values/styles.xml
+++ b/app/android/TicTacToe/res/values/styles.xml
@@ -1,23 +1,35 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <style name="AppTheme" parent="android:Theme.Light" />
-    
-    <style name="ButtonStyle">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:shadowColor">#222222</item>
-        <item name="android:shadowDy">1</item>
-        <item name="android:shadowRadius">1</item>
+
+    <!-- Current styles -->
+    <style name="MenuButton">
+        <item name="android:layout_width">210dp</item>
+        <item name="android:layout_height">50dp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">18sp</item>
-        <item name="android:maxHeight">40dp</item>
-        <item name="android:textColor">#FFFFFF</item>
     </style>
     
     <style name="PlaygroundStyle">
         <item name="android:layout_width">290dp</item>
         <item name="android:layout_height">290dp</item>
         <item name="android:layout_centerInParent">true</item>
+    </style>
+    
+    <style name="OptionsLabel">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">#6d6f5f</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+    
+    <!-- Obsolete styles -->
+    <style name="ButtonStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">18sp</item>
     </style>
 
 </resources>
