--- a/app/android/TicTacToe/res/layout/activity_main.xml
+++ b/app/android/TicTacToe/res/layout/activity_main.xml
@@ -1,29 +1,54 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="@drawable/background"
+    android:weightSum="455" >
+   	
+    <TableRow android:layout_weight="25">
+        <View android:layout_height="0dp"
+            android:layout_width="0dp"
+            android:layout_weight="1" />
+   	</TableRow>
+   	
+   	<TableRow android:layout_weight="355">
+   	    <View android:layout_weight="5"
+   	        android:layout_width="0dp"
+   	        android:layout_height="0dp"/>
+   	    
+   	    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	        xmlns:tools="http://schemas.android.com/tools"
+	        android:id="@+id/fragment_root"
+	        android:layout_width="0dp"
+	        android:layout_height="match_parent"
+	        android:layout_weight="310"
+	        android:background="#70000000" />
+   	    
+   	    <View android:layout_weight="5"
+   	        android:layout_width="0dp"
+   	        android:layout_height="0dp"/>
+    </TableRow>
+   	
+   	<TableRow android:layout_weight="55" >
+   	    <View android:layout_weight="5"
+   	        android:layout_width="0dp"
+   	        android:layout_height="0dp"/>
+   	    
+		<fragment android:name="com.x3.tictactoe.NavMenuFragment"
+			android:id="@+id/nav_menu"
+			android:layout_width="0dp"
+			android:layout_height="match_parent"
+			android:layout_weight="310" />
+		
+		<View android:layout_weight="5"
+   	        android:layout_width="0dp"
+   	        android:layout_height="0dp"/>
+   	</TableRow>
+   	
+   	<TableRow android:layout_weight="20" >
+   	    <View android:layout_width="0dp"
+	        android:layout_height="0dp"
+	        android:layout_weight="1" />
+   	</TableRow>
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="fitXY"
-        android:src="@drawable/background"
-        android:contentDescription="@string/background_desc" />
-    
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/fragment_root"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="0dp" />
-
-    <fragment android:name="com.x3.tictactoe.NavMenuFragment"
-        android:id="@+id/nav_menu"
-        android:layout_width="match_parent"
-        android:layout_height="53dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginBottom="21dp"
-        android:layout_alignParentBottom="true" />
-
-</RelativeLayout>
+</TableLayout>
