--- a/app/android/TicTacToe/res/layout/nav_menu.xml
+++ b/app/android/TicTacToe/res/layout/nav_menu.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:padding="1dp" >
 	
 	<Button android:id="@+id/back_button"
 	    android:onClick="onBackClicked"
