--- a/app/android/TicTacToe/res/values/styles.xml
+++ b/app/android/TicTacToe/res/values/styles.xml
@@ -4,8 +4,8 @@
 
     <!-- Current styles -->
     <style name="MenuButton">
-        <item name="android:layout_width">210dp</item>
-        <item name="android:layout_height">50dp</item>
+        <item name="android:layout_marginLeft">50dp</item>
+        <item name="android:layout_marginRight">50dp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">18sp</item>
     </style>
