--- a/app/android/TicTacToe/res/layout/activity_main.xml
+++ b/app/android/TicTacToe/res/layout/activity_main.xml
@@ -2,8 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
-    android:weightSum="455" >
+    android:background="@drawable/background" >
    	
     <TableRow android:layout_weight="25">
         <View android:layout_height="0dp"
@@ -22,7 +21,7 @@
 	        android:layout_width="0dp"
 	        android:layout_height="match_parent"
 	        android:layout_weight="310"
-	        android:background="#70000000" />
+	        android:background="#05000000" />
    	    
    	    <View android:layout_weight="5"
    	        android:layout_width="0dp"
