--- a/app/android/TicTacToe/res/values/styles.xml
+++ b/app/android/TicTacToe/res/values/styles.xml
@@ -6,8 +6,12 @@
     <style name="MenuButton">
         <item name="android:layout_marginLeft">50dp</item>
         <item name="android:layout_marginRight">50dp</item>
+        <item name="android:layout_marginTop">3dp</item>
+        <item name="android:layout_marginBottom">3dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">32sp</item>
     </style>
     
     <style name="PlaygroundStyle">
