--- a/app/android/TicTacToe/res/layout/game_board.xml
+++ b/app/android/TicTacToe/res/layout/game_board.xml
@@ -3,42 +3,34 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-
-    <View android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="73" />
     
     <RelativeLayout android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="0dp"
+        android:layout_weight="75"
+        android:paddingBottom="5dp" >
         
         <TextView android:text="@string/player_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:textColor="#000080"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:layout_alignParentBottom="true" />
         <TextView android:text="@string/player_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_marginRight="15dp"
             android:textColor="#aa0000"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:layout_alignParentBottom="true" />
     </RelativeLayout>
-    
-    <View android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="13" />
     
     <RelativeLayout android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="272">
+        android:layout_weight="280">
         
         <com.x3.tictactoe.PlaygroundView android:id="@+id/playground"
         	style="@style/PlaygroundStyle" />
     </RelativeLayout>
-
-    <View android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="79" />
 </LinearLayout>
