--- a/app/android/TicTacToe/res/layout/activity_main.xml
+++ b/app/android/TicTacToe/res/layout/activity_main.xml
@@ -28,7 +28,9 @@
    	        android:layout_height="0dp"/>
     </TableRow>
    	
-   	<TableRow android:layout_weight="55" >
+   	<TableRow android:id="@+id/nav_menu_root"
+   	    android:layout_weight="55"
+   	    android:visibility="invisible" >
    	    <View android:layout_weight="5"
    	        android:layout_width="0dp"
    	        android:layout_height="0dp"/>
