--- a/app/android/TicTacToe/res/layout/main_menu.xml
+++ b/app/android/TicTacToe/res/layout/main_menu.xml
@@ -4,9 +4,25 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
     
+    <RelativeLayout android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="75"
+        android:paddingBottom="5dp" >
+        
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/logo"
+            android:textColor="#ff27943d"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true" />
+    </RelativeLayout>
+    
     <View android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="131.5" />
+        android:layout_weight="56.5" />
      
     <RelativeLayout android:layout_width="match_parent"
 	    android:layout_height="0dp"
