--- a/app/android/TicTacToe/res/layout/activity_main.xml
+++ b/app/android/TicTacToe/res/layout/activity_main.xml
@@ -1,55 +1,99 @@
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/background" >
-   	
-    <TableRow android:layout_weight="25">
-        <View android:layout_height="0dp"
-            android:layout_width="0dp"
-            android:layout_weight="1" />
-   	</TableRow>
-   	
-   	<TableRow android:layout_weight="355">
-   	    <View android:layout_weight="5"
-   	        android:layout_width="0dp"
-   	        android:layout_height="0dp"/>
-   	    
-   	    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	        xmlns:tools="http://schemas.android.com/tools"
-	        android:id="@+id/fragment_root"
-	        android:layout_width="0dp"
-	        android:layout_height="match_parent"
-	        android:layout_weight="310"
-	        android:background="#05000000" />
-   	    
-   	    <View android:layout_weight="5"
-   	        android:layout_width="0dp"
-   	        android:layout_height="0dp"/>
-    </TableRow>
-   	
-   	<TableRow android:id="@+id/nav_menu_root"
-   	    android:layout_weight="55"
-   	    android:visibility="invisible" >
-   	    <View android:layout_weight="5"
-   	        android:layout_width="0dp"
-   	        android:layout_height="0dp"/>
-   	    
-		<fragment android:name="com.x3.tictactoe.NavMenuFragment"
-			android:id="@+id/nav_menu"
-			android:layout_width="0dp"
-			android:layout_height="match_parent"
-			android:layout_weight="310" />
-		
-		<View android:layout_weight="5"
-   	        android:layout_width="0dp"
-   	        android:layout_height="0dp"/>
-   	</TableRow>
-   	
-   	<TableRow android:layout_weight="20" >
-   	    <View android:layout_width="0dp"
-	        android:layout_height="0dp"
-	        android:layout_weight="1" />
-   	</TableRow>
+    android:layout_height="match_parent" >
+    
+    <TableLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/background" >
 
-</TableLayout>
+        <TableRow android:layout_weight="25" >
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+        </TableRow>
+
+        <TableRow android:layout_weight="355" >
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="5" />
+
+            <RelativeLayout
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:id="@+id/fragment_root"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="310"
+                android:background="#05000000" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="5" />
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/nav_menu_root"
+            android:layout_weight="55"
+            android:visibility="invisible" >
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="5" />
+
+            <fragment
+                android:id="@+id/nav_menu"
+                android:name="com.x3.tictactoe.NavMenuFragment"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="310" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="5" />
+        </TableRow>
+
+        <TableRow android:layout_weight="20" >
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+        </TableRow>
+    </TableLayout>
+    
+    <LinearLayout
+        android:id="@+id/splash_screen"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha="0"
+        android:background="#000"
+        android:orientation="vertical"
+        android:gravity="center_horizontal"
+        android:weightSum="455" >
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="75" />
+        
+        <TextView
+            android:id="@+id/logo_image_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/logo"
+            android:textColor="#ff27943d"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+</RelativeLayout>
