--- a/app/android/TicTacToe/res/layout/activity_main.xml
+++ b/app/android/TicTacToe/res/layout/activity_main.xml
@@ -30,8 +30,7 @@
                 android:id="@+id/fragment_root"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="310"
-                android:background="#05000000" />
+                android:layout_weight="310" />
 
             <View
                 android:layout_width="0dp"
