Updated game options switcher style

--- a/app/android/TicTacToe/res/layout/game_options.xml
+++ b/app/android/TicTacToe/res/layout/game_options.xml
@@ -73,29 +73,26 @@
 	        android:layout_marginLeft="18dp" />
         
         <Button android:id="@+id/hard_mode_btn"
-            android:background="@drawable/switch_selector"
             android:text="@string/hard"
             android:onClick="onHardSelected"
-            android:layout_centerVertical="true"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="10dp" />        
+            android:layout_marginRight="10dp"
+            style="@style/SwitchButton" />        
         <Button android:id="@+id/normal_mode_btn"
-            android:background="@drawable/switch_selector"
             android:text="@string/normal"
             android:onClick="onNormalSelected"
-            android:layout_centerVertical="true"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toLeftOf="@id/hard_mode_btn" />
+            android:layout_height="match_parent"
+            android:layout_toLeftOf="@id/hard_mode_btn"
+            style="@style/SwitchButton" />
         <Button android:id="@+id/easy_mode_btn"
-            android:background="@drawable/switch_selector"
             android:text="@string/easy"
-            android:layout_centerVertical="true"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toLeftOf="@id/normal_mode_btn" />
+            android:layout_height="match_parent"
+            android:layout_toLeftOf="@id/normal_mode_btn"
+            style="@style/SwitchButton" />
     </RelativeLayout>
     
     <RelativeLayout android:layout_width="match_parent"
@@ -120,22 +117,20 @@
 	        android:layout_alignRight="@id/difficulty_placeholder" />
         
         <Button android:id="@+id/board_5x5_btn"
-            android:background="@drawable/switch_selector"
             android:text="@string/board_5x5"
             android:onClick="on5x5Selected"
-            android:layout_centerVertical="true"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="10dp" />
+            android:layout_marginRight="10dp"
+            style="@style/SwitchButton" />
         <Button android:id="@+id/board_3x3_btn"
-            android:background="@drawable/switch_selector"
             android:text="@string/board_3x3"
             android:onClick="on3x3Selected"
-            android:layout_centerVertical="true"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toLeftOf="@id/board_5x5_btn" />
+            android:layout_height="match_parent"
+            android:layout_toLeftOf="@id/board_5x5_btn"
+            style="@style/SwitchButton" />
         
     </RelativeLayout>
 
