--- a/app/android/TicTacToe/res/drawable/switch_selector.xml
+++ b/app/android/TicTacToe/res/drawable/switch_selector.xml
@@ -2,13 +2,13 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
     <item android:drawable="@drawable/switch_pressed_bg"
         android:state_focused="true"
+        android:state_selected="false"
         android:state_pressed="true"/>
     <item android:drawable="@drawable/switch_pressed_bg"
         android:state_focused="false"
-        android:state_pressed="true"/>
+        android:state_selected="false"
+        android:state_pressed="true" />
     <item android:drawable="@drawable/switch_selected_bg"
-        android:state_selected="true"
-        android:state_pressed="false"/>
+        android:state_selected="true" />
 	<item android:drawable="@drawable/switch_bg"/>
-	
 </selector>
