--- a/app/android/TicTacToe/res/values/styles.xml
+++ b/app/android/TicTacToe/res/values/styles.xml
@@ -14,6 +14,14 @@
         <item name="android:textSize">32sp</item>
     </style>
     
+    <style name="SwitchButton">
+        <item name="android:background">@drawable/switch_selector</item>
+        <item name="android:textColor">@drawable/switch_text_color</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:layout_marginTop">5dp</item>
+    </style>
+    
     <style name="PlaygroundStyle">
         <item name="android:layout_width">290dp</item>
         <item name="android:layout_height">290dp</item>
